--- a/conf/yhf.conf
+++ b/conf/yhf.conf
@@ -1,6 +1,5 @@
 server {
-  location / {
-        root   /etc/nginx/html;
-        index  index.html index.htm;
-}
+    listen 80;
+    index index.html index.htm index.php;
+    root /etc/nginx/html;
 }
